--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<!--Angular ToApp -->
+<!--ANGULAR TODO APP
+    VERSOPM: 1.0
+    AUTHOR: Tai Tran-->
 <html ng-app="App">
 <head>
-   <style>
+    <style>
 
-   </style>
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
@@ -14,7 +16,6 @@
     <link rel="stylesheet" href="style/index.css">
     <script src="Controllers/auth.js"></script>
     <script src="Services/Authentication.js"></script>
-    <script src="Controllers/switch.js"></script>
     <script src="Directive/confirm_pass.js"></script>
     <script src="Services/Registration.js"></script>
     <script src="Services/AddTask.js"></script>
@@ -24,7 +25,7 @@
 
 <body class="bg-primary">
 
- <div ng-view class="animate"></div>
+<div ng-view class="animate"></div>
 
 </body>
 </html>
