--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="Controllers/auth.js"></script>
     <script src="Services/Authentication.js"></script>
     <script src="Directive/confirm_pass.js"></script>
+    <script src="Directive/fadeaway.js"></script>
     <script src="Services/Registration.js"></script>
     <script src="Services/AddTask.js"></script>
     <script src="Services/getTask.js"></script>
